<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/colorBlack"
    android:visibility="visible">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"/>
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".load" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Banner"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/menu_background"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_border"
            android:gravity="center"
            android:ems="20"
            android:importantForAutofill="no"
            android:text="@string/Edit"
            android:textColor="@color/colorBlack"
            android:textSize="21sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="75dp"
                    android:ems="20"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:text="@string/Destination"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/changeButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/DestinationChoice"
                    android:background="@drawable/rndbtn_background"
                    android:textColor="@drawable/buttontext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="75dp"
                    android:ems="20"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:text="@string/Stops"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/stopsButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rndbtn_background"
                    android:textColor="@drawable/buttontext"
                    android:text="@string/StopChoice" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="75dp"
                    android:ems="20"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:text="@string/StartChoice"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rndbtn_background"
                    android:textColor="@drawable/buttontext"
                    android:text="@string/StartfromLoad" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/searchView1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@android:color/white"
                android:hint="Search Location"
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorPrimary"
                android:text="@string/Search" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>