<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/Screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/menu_background"
        android:visibility="visible">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"/>
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Banner"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/text_border"
            android:ems="18"
            android:textSize="19sp"
            android:text="@string/app_name"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/createButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Create"
                android:background="@drawable/rndbtn"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/loadButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Edit"
                android:background="@drawable/rndbtn"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Start"
                android:background="@drawable/rndbtn"/>
        </LinearLayout>

    </LinearLayout>

    </RelativeLayout>
